# torch-relativistic

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1  setup_cuda.sh  setup_cuda_win.ps1  test_fixes.py
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml  tests.yml
examples/: data_acquisition_example.py
scripts/: check_black.py  check_mypy.py  check_ruff.py
src/python_template/: __init__.py
src/torch_relativistic/: __init__.py  attention.py  gnn.py  snn.py  transforms.py  utils.py
src/torch_relativistic/data/: __init__.py  acquisition.py  base.py  loaders.py  processors.py  visualizers.py
tests/: __init__.py  test_basic.py
